@@ -1,2 +1,6 @@
 # Git-Obsidian
 Tool to list mergeRequest-threads in obsidian
+
+# Execute
+create a gradle shadowJar
+java --enable-native-access=ALL-UNNAMED -jar build/libs/git-obsidian-1.0.SNAPSHOT-all.jar
